--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </section>
         <section class="we" id="whatWeDo">
             <lottie-player class="img-absolute"src="https://assets4.lottiefiles.com/private_files/lf30_2oxijfub.json"
-                background="transparent" speed="1" style="width: 800px; height: 400px;" loop autoplay></lottie-player>
+                background="transparent" speed="1"  loop autoplay></lottie-player>
             <div>
                 <div>
                     <img src="./img/gem-green.png" alt="">
@@ -66,7 +66,6 @@
                 <input type="submit" value="SUBMIT"/>
             </form>
         </section>
-        
     </main>
     <footer>
         <p>© Copyright 2022 Jewels of Code</p>
