--- a/index.html
+++ b/index.html
@@ -30,13 +30,17 @@
             <img src="./img/jewelry.png" alt="">
         </section>
         <section class="we" id="whatWeDo">
-            <lottie-player class="img-absolute"src="https://assets4.lottiefiles.com/private_files/lf30_2oxijfub.json"
-                background="transparent" speed="1"  loop autoplay></lottie-player>
             <div>
+                <div>
+                    <lottie-player class="img-absolute"
+                        src="https://assets4.lottiefiles.com/private_files/lf30_2oxijfub.json" background="transparent"
+                        speed="1" loop autoplay></lottie-player>
+                </div>
                 <div>
                     <img src="./img/gem-green.png" alt="">
                     <h2>Custom design</h2>
-                    <p>We craft unique designs from scratch to reflect your business in an optimal way to connect you to your audience</p>
+                    <p>We craft unique designs from scratch to reflect your business in an optimal way to connect you to
+                        your audience</p>
                 </div>
                 <div>
                     <img src="./img/juice.png" alt="">
@@ -54,16 +58,18 @@
         <section class="contact" id="whatWeAre">
             <div>
                 <h2>Let's build something great together</h2>
-                <p>We're a Wordpress web agency based in Argentina. Our passion is to develop beautiful websites specially
+                <p>We're a Wordpress web agency based in Argentina. Our passion is to develop beautiful websites
+                    specially
                     designed for your target audiences. Sounds good? Send us an email.</p>
                 <p>Jewelsofcode@gmail.com</p>
-                <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_cmf6a3.json"  background="transparent"  speed="1"  style="width: 200px; height: 200px;"  loop  autoplay></lottie-player>
+                <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_cmf6a3.json" background="transparent"
+                    speed="1" style="width: 200px; height: 200px;" loop autoplay></lottie-player>
             </div>
-            <form>      
-                <input name="name" type="text" class="feedback-input" placeholder="Name" />   
+            <form>
+                <input name="name" type="text" class="feedback-input" placeholder="Name" />
                 <input name="email" type="text" class="feedback-input" placeholder="Email" />
                 <textarea name="text" class="feedback-input" placeholder="Comment"></textarea>
-                <input type="submit" value="SUBMIT"/>
+                <input type="submit" value="SUBMIT" />
             </form>
         </section>
     </main>
